kube/deploy/apps/sandstorm/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app sandstorm
  namespace: *app
spec:
  endpointSelector: {}
  ingress:
    # same namespace
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    # players
    - fromCIDRSet:
        - cidr: "${IP_ROUTER_LAN_CIDR}"
        - cidr: "${IP_WG_USER_1_V4}"
        - cidr: "${IP_WG_GUEST_V4}"
      toPorts:
        - ports:
            - port: "27102"
            - port: "27131"
  egress:
    # same namespace
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    - toEntities:
        - world
